# models/user.go
@@ -6,13 +6,16 @@ import (
 	"gorm.io/gorm"
 )
 
-// User 用户模型，包含微信小程序相关字段
+// 在文件顶部添加以下注释
+
+// User 用户模型
 // @Description 用户信息
 type User struct {
-	ID        uint           `gorm:"primarykey" json:"id"`              // 用户ID
-	CreatedAt time.Time      `json:"created_at"`                        // 创建时间
-	UpdatedAt time.Time      `json:"updated_at"`                        // 更新时间
-	DeletedAt gorm.DeletedAt `gorm:"index" json:"deleted_at,omitempty"` // 删除时间，使用 gorm.DeletedAt 类型
+	ID        uint      `gorm:"primarykey" json:"id"`
+	CreatedAt time.Time `json:"created_at"`
+	UpdatedAt time.Time `json:"updated_at"`
+	// swagger:ignore
+	DeletedAt gorm.DeletedAt `gorm:"index" json:"-"` // 使用 swagger:ignore 标记
 
 	Username string `gorm:"size:50;comment:用户名;default:'' " json:"username"`
 	Password string `gorm:"size:100;comment:密码;default:'' " json:"password"`
